--- a/previews/PR258/models/index.html
+++ b/previews/PR258/models/index.html
@@ -98,7 +98,7 @@ ul.task-list li input[type="checkbox"] {
 // SOFTWARE.
 
 window.onload = function () {
-    const versionsUrl = 'https://raw.githubusercontent.com/JuliaAstro/GeneralAstrodynamics.jl/gh-pages/lib/AstrodynamicalModels.jl/versions.js';
+    const versionsUrl = 'https://raw.githubusercontent.com/JuliaAstro/GeneralAstrodynamics.jl/gh-pages/lib/AstrodynamicalModels/versions.js';
 
     // Fetch the versions.js file
     fetch(versionsUrl)
