--- a/previews/PR280/index.html
+++ b/previews/PR280/index.html
@@ -530,7 +530,7 @@ window.onload = function () {
 </header>
 
 
-<p><a href="https://github.com/cadojo/GeneralAstrodynamics.jl/actions?query=workflow%3ATests"><img src="https://github.com/cadojo/GeneralAstrodynamics.jl/workflows/Tests/badge.svg" class="img-fluid" alt="Tests"></a> <a href="https://cadojo.github.io/GeneralAstrodynamics.jl/"><img src="https://github.com/cadojo/GeneralAstrodynamics.jl/workflows/Documentation/badge.svg" class="img-fluid" alt="Docs"></a></p>
+<p><a href="https://github.com/cadojo/GeneralAstrodynamics.jl/actions?query=workflow%3ATests"><img src="https://github.com/cadojo/GeneralAstrodynamics.jl/workflows/Tests/badge.svg" class="img-fluid" alt="Tests"></a> <a href="https://cadojo.github.io/GeneralAstrodynamics.jl/"><img src="https://github.com/cadojo/GeneralAstrodynamics.jl/workflows/Documentation/badge.svg" class="img-fluid" alt="Docs"></a> <a href="https://github.com/JuliaTesting/Aqua.jl"><img src="https://raw.githubusercontent.com/JuliaTesting/Aqua.jl/master/badge.svg" class="img-fluid" alt="Aqua"></a></p>
 <section id="generalastrodynamics.jl" class="level1">
 <h1><code>GeneralAstrodynamics.jl</code></h1>
 <p><em>Common astrodynamics calculations, with hooks into the SciML ecosystem.</em></p>
