--- a/previews/PR280/index.html
+++ b/previews/PR280/index.html
@@ -530,9 +530,10 @@ window.onload = function () {
 </header>
 
 
-<p><a href="https://github.com/cadojo/GeneralAstrodynamics.jl/actions?query=workflow%3ATests"><img src="https://github.com/cadojo/GeneralAstrodynamics.jl/workflows/Tests/badge.svg" class="img-fluid" alt="Tests"></a> <a href="https://cadojo.github.io/GeneralAstrodynamics.jl/"><img src="https://github.com/cadojo/GeneralAstrodynamics.jl/workflows/Documentation/badge.svg" class="img-fluid" alt="Docs"></a> <a href="https://github.com/JuliaTesting/Aqua.jl"><img src="https://raw.githubusercontent.com/JuliaTesting/Aqua.jl/master/badge.svg" class="img-fluid" alt="Aqua"></a></p>
 <section id="generalastrodynamics.jl" class="level1">
 <h1><code>GeneralAstrodynamics.jl</code></h1>
+<p><a href="https://juliaastro.org/GeneralAstrodynamics/stable/"><img src="https://img.shields.io/badge/docs-stable-blue.svg" class="img-fluid" alt="Stable"></a> <a href="https://juliaastro.org/GeneralAstrodynamics.jl/dev/"><img src="https://img.shields.io/badge/docs-dev-blue.svg" class="img-fluid" alt="Dev"></a></p>
+<p><a href="https://github.com/JuliaAstro/GeneralAstrodynamics.jl/actions/workflows/Tests.yml"><img src="https://github.com/JuliaAstro/GeneralAstrodynamics.jl/actions/workflows/Tests.yml/badge.svg" class="img-fluid" alt="Tests"></a> <a href="https://codecov.io/gh/JuliaAstro/GeneralAstrodynamics.jl"><img src="https://codecov.io/gh/JuliaAstro/GeneralAstrodynamics.jl/graph/badge.svg" class="img-fluid" alt="Codecov"></a> <a href="https://github.com/JuliaTesting/Aqua.jl"><img src="https://raw.githubusercontent.com/JuliaTesting/Aqua.jl/master/badge.svg" class="img-fluid" alt="Aqua"></a> <a href="https://juliaci.github.io/NanosoldierReports/pkgeval_badges/report.html"><img src="https://juliaci.github.io/NanosoldierReports/pkgeval_badges/G/GeneralAstrodynamics.svg" class="img-fluid" alt="PkgEval"></a> <a href="https://opensource.org/licenses/MIT"><img src="https://img.shields.io/badge/License-MIT-yellow.svg" class="img-fluid" alt="License"></a></p>
 <p><em>Common astrodynamics calculations, with hooks into the SciML ecosystem.</em></p>
 <section id="juliacon-talk" class="level2">
 <h2 class="anchored" data-anchor-id="juliacon-talk">JuliaCon Talk</h2>
